serverless/inference-logger-resources.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: message-dumper
  namespace: kserve-demo
spec:
  template:
    spec:
      containers:
        - image: gcr.io/knative-releases/knative.dev/eventing-contrib/cmd/event_display
